[workspace.package]
authors = ["Aurora Labs <hello@aurora.dev>"]
version = "1.0.0"
edition = "2021"
homepage = "https://github.com/aurora-is-near/aurora-forwarder"
repository = "https://github.com/aurora-is-near/aurora-forwarder"
license = "CC0-1.0"
readme = "README.md"
publish = false

[workspace]
resolver = "2"
members = [
    "factory",
    "fees",
    "forwarder",
    "tests",
    "utils"
]

[workspace.dependencies]
anyhow = "1"
aurora-engine-types = { version = "1.1", default-features = false }
ethabi = "18"
near-sdk = "5"
near-plugins = { git = "https://github.com/aurora-is-near/near-plugins", tag = "v0.2.0" }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
near-workspaces = "0.10"
tokio = { version = "1", features = ["macros"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
