[package]
name = "aurora-forwarder-factory"
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
all = "deny"
nursery = "deny"
pedantic = "deny"

[dependencies]
aurora-engine-types.workspace = true
forwarder-utils = { path = "../utils" }
near-sdk.workspace = true

[features]
tests = []
