[package]
name = "aurora-forwarder-fees"
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
all = "deny"
nursery = "deny"
pedantic = "deny"

[dependencies]
aurora-engine-types.workspace = true
near-sdk.workspace = true
