[package]
name = "aurora-forwarder"
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
all = "deny"
nursery = "deny"
pedantic = "deny"
as_conversions = "deny"

[dependencies]
arrayvec = { version = "0.7", default-features = false }
borsh = { version = "1", default-features = false, features = ["derive"] }
hex = { package = "hex-conservative", version = "0.2", default-features = false }
